030-software/fluxcd/apps/rustpad/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rustpad
  labels:
    app: rustpad
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rustpad
